--- a/package.json
+++ b/package.json
@@ -30,5 +30,18 @@
     "eslint-plugin-react-refresh": "^0.4.19",
     "globals": "^16.0.0",
     "vite": "^6.3.5"
-  }
+  },
+  "description": "This template provides a minimal setup to get React working in Vite with HMR and some ESLint rules.",
+  "main": "eslint.config.js",
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/Programming-Hero-Web-Course4/b11a10-client-side-faysalahmed915.git"
+  },
+  "keywords": [],
+  "author": "",
+  "license": "ISC",
+  "bugs": {
+    "url": "https://github.com/Programming-Hero-Web-Course4/b11a10-client-side-faysalahmed915/issues"
+  },
+  "homepage": "https://github.com/Programming-Hero-Web-Course4/b11a10-client-side-faysalahmed915#readme"
 }
