--- a/package.json
+++ b/package.json
@@ -10,26 +10,35 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@emotion/react": "^11.14.0",
     "@tailwindcss/vite": "^4.1.7",
     "firebase": "^11.8.0",
+    "lottie-react": "^2.4.1",
     "react": "^19.1.0",
+    "react-awesome-reveal": "^4.3.1",
     "react-dom": "^19.1.0",
+    "react-helmet": "^6.1.0",
     "react-hot-toast": "^2.5.2",
     "react-icons": "^5.5.0",
+    "react-responsive-carousel": "^3.2.23",
     "react-router": "^7.6.0",
-    "sweetalert2": "^11.21.2",
-    "tailwindcss": "^4.1.7"
+    "react-simple-typewriter": "^5.0.1",
+    "react-tooltip": "^5.28.1",
+    "sweetalert2": "^11.21.2"
   },
   "devDependencies": {
     "@eslint/js": "^9.25.0",
     "@types/react": "^19.1.2",
     "@types/react-dom": "^19.1.2",
     "@vitejs/plugin-react": "^4.4.1",
+    "autoprefixer": "^10.4.21",
     "daisyui": "^5.0.35",
     "eslint": "^9.25.0",
     "eslint-plugin-react-hooks": "^5.2.0",
     "eslint-plugin-react-refresh": "^0.4.19",
     "globals": "^16.0.0",
+    "postcss": "^8.5.3",
+    "tailwindcss": "^4.1.7",
     "vite": "^6.3.5"
   },
   "description": "This template provides a minimal setup to get React working in Vite with HMR and some ESLint rules.",
