--- a/package.json
+++ b/package.json
@@ -10,8 +10,10 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@egjs/react-flicking": "^4.13.0",
     "@emotion/react": "^11.14.0",
     "@tailwindcss/vite": "^4.1.7",
+    "axios": "^1.10.0",
     "firebase": "^11.8.0",
     "lottie-react": "^2.4.1",
     "react": "^19.1.0",
